--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@
         .evergreen-gradient { background: linear-gradient(135deg, #059669 0%, #064e3b 100%); }
         .card-bg { background-color: #1e1e1e; border: 1px solid rgba(255,255,255,0.05); }
         .input-bg { background-color: #2d2d2d; border: 1px solid rgba(255,255,255,0.1); color: white; }
+        #capture-zone { background-color: #121212 !important; border-radius: 24px; padding: 24px; }
+        .whatsapp-green { background-color: #25D366; color: white; }
         .safe-render { line-height: 1.8; display: inline-block; vertical-align: middle; }
     </style>
 </head>
@@ -37,6 +39,60 @@
     </header>
 
     <div class="p-4 space-y-6">
+        <section v-if="!isExporting" class="card-bg p-5 rounded-3xl shadow-sm">
+            <h2 class="font-bold text-emerald-500 mb-4 text-xs uppercase tracking-widest">1. 加入朋友</h2>
+            <div class="flex gap-2 mb-4">
+                <input v-model="newUser" @keyup.enter="addUser" type="text" placeholder="名稱..." class="input-bg flex-1 p-3 rounded-2xl text-sm outline-none">
+                <button @click="addUser" class="bg-emerald-600 text-white px-6 rounded-2xl text-sm font-bold active:scale-95 transition-all">加入</button>
+            </div>
+            <div class="flex flex-wrap gap-2">
+                <span v-for="(u, i) in users" :key="u" class="bg-emerald-500/10 text-emerald-500 px-4 py-2 rounded-xl text-xs border border-emerald-500/20 flex items-center gap-2 font-bold">
+                    {{ u }} <button @click="removeUser(i)" class="opacity-40 text-lg">&times;</button>
+                </span>
+            </div>
+        </section>
+
+        <div id="capture-zone">
+            <section v-if="expenses.length > 0" class="bg-emerald-950/20 border border-emerald-900/40 p-6 rounded-[32px] mb-2">
+                <div class="flex justify-between items-start mb-6">
+                    <div>
+                        <h2 class="font-black text-emerald-500 text-xl tracking-tight safe-render">最終結算</h2>
+                        <p class="text-[10px] text-gray-500 -mt-2">Settlement</p>
+                    </div>
+                    <div class="text-right">
+                        <div class="text-[10px] font-bold text-gray-500 uppercase tracking-widest mb-1 safe-render">總消費 Total Spent</div>
+                        <div class="font-mono font-bold text-emerald-500 text-lg">HK${{ totalSpent.toFixed(1) }}</div>
+                    </div>
+                </div>
+                <div class="space-y-3">
+                    <div v-for="(s, i) in settlements" :key="i" class="bg-black/40 border border-white/5 flex items-center justify-between p-4 rounded-2xl">
+                        <div class="flex items-center gap-2">
+                            <span class="text-rose-400 font-black text-sm safe-render">{{ s.from }}</span>
+                            <i class="fas fa-arrow-right text-[10px] text-gray-700"></i>
+                            <span class="text-emerald-500 font-black text-sm safe-render">{{ s.to }}</span>
+                        </div>
+                        <span class="font-mono text-xl text-emerald-500 font-black italic safe-render">HK${{ s.amount.toFixed(1) }}</span>
+                    </div>
+                </div>
+            </section>
+
+            <div v-if="expenses.length > 0 && showDetails" class="space-y-3 mt-4">
+                <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
+                    <div class="flex-1 min-w-0 mr-4">
+                        <div class="font-black text-sm text-gray-200 truncate safe-render">{{ exp.item }}</div>
+                        <div class="text-[10px] text-gray-500"><b class="text-emerald-600 uppercase">{{ exp.payer }}</b> 付 {{ exp.currency }} {{ exp.amount }}</div>
+                    </div>
+                    <div class="text-right flex items-center gap-4">
+                        <div class="font-mono font-bold text-gray-200">HK${{ exp.hkd.toFixed(1) }}</div>
+                        <div v-if="!isExporting" class="flex gap-3 opacity-20 text-xs">
+                            <button @click="startEdit(idx)"><i class="fas fa-edit"></i></button>
+                            <button @click="removeExpense(idx)" class="text-red-500"><i class="fas fa-trash"></i></button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <section v-if="!isExporting" id="input-section" class="card-bg rounded-3xl p-6 border border-white/5 mt-6">
             <div class="space-y-5">
                 <input v-model="form.item" type="text" placeholder="項目 (例如: 午飯)" class="input-bg w-full p-4 rounded-2xl text-sm outline-none">
@@ -60,7 +116,7 @@
                         </div>
                     </div>
                     <div class="relative">
-                        <input v-model.number="currentRate" :disabled="rateMode === 'auto'" type="number" step="0.0001" :class="rateMode === 'auto' ? 'opacity-50' : 'text-emerald-400'" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none">
+                        <input v-model.number="currentRate" :disabled="rateMode === 'auto'" type="number" step="0.0001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400">
                     </div>
                 </div>
 
@@ -88,28 +144,21 @@
         </section>
 
         <div v-if="showClearModal" class="fixed inset-0 bg-black/90 backdrop-blur-lg z-[100] flex items-center justify-center p-6" @click.self="showClearModal = false">
-            <div class="card-bg w-full max-w-xs rounded-[32px] p-8 border border-white/10 shadow-2xl">
-                <div class="text-center mb-6">
-                    <i class="fas fa-eraser text-emerald-500 text-3xl mb-4"></i>
-                    <h3 class="font-black text-lg">清除選項</h3>
-                    <p class="text-[10px] text-gray-500">請勾選要刪除的內容</p>
-                </div>
-                
+            <div class="card-bg w-full max-w-xs rounded-[32px] p-8 border border-white/10 shadow-2xl text-center">
+                <i class="fas fa-eraser text-emerald-500 text-3xl mb-4"></i>
+                <h3 class="font-black text-lg mb-6">清除選項</h3>
                 <div class="space-y-4 mb-8">
-                    <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer active:bg-white/10">
+                    <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer">
                         <span class="text-sm font-bold">消費紀錄</span>
                         <input type="checkbox" v-model="clearOpts.expenses" class="w-5 h-5 accent-emerald-500">
                     </label>
-                    <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer active:bg-white/10">
+                    <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer">
                         <span class="text-sm font-bold">朋友名單</span>
                         <input type="checkbox" v-model="clearOpts.users" class="w-5 h-5 accent-emerald-500">
                     </label>
                 </div>
-
-                <div class="flex flex-col gap-3">
-                    <button @click="execClear" class="bg-rose-600 text-white py-4 rounded-2xl text-xs font-black shadow-lg active:scale-95 transition-all">確認刪除</button>
-                    <button @click="showClearModal = false" class="text-gray-500 py-2 text-xs font-bold">取消</button>
-                </div>
+                <button @click="execClear" class="w-full bg-rose-600 text-white py-4 rounded-2xl text-xs font-black mb-2">確認刪除</button>
+                <button @click="showClearModal = false" class="text-gray-500 text-xs font-bold">取消</button>
             </div>
         </div>
 
@@ -126,44 +175,61 @@ const { createApp, ref, computed, watch, onMounted } = Vue;
 createApp({
     setup() {
         const users = ref([]); const expenses = ref([]); const showDetails = ref(true);
-        const newUser = ref(""); const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
+        const newUser = ref(""); const isEditing = ref(false); const editIndex = ref(null);
+        const isExporting = ref(false); const previewImg = ref(null); const showTextShare = ref(false);
+        const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
         const currentRate = ref(1); const rateMode = ref('auto');
         const showClearModal = ref(false); const clearOpts = ref({ expenses: true, users: false });
-        // ...其餘變數與之前的 fetchRate, addUser, addExpense 邏輯一致...
 
-        const execClear = () => {
-            if (!clearOpts.value.expenses && !clearOpts.value.users) return (showClearModal.value = false);
-            if (confirm("確定執行刪除？")) {
-                if (clearOpts.value.expenses) expenses.value = [];
-                if (clearOpts.value.users) { users.value = []; form.value.involved = []; form.value.payer = ""; }
-                showClearModal.value = false;
-            }
+        const fetchRate = async () => {
+            if(form.value.currency === 'HKD') { currentRate.value = 1; return; }
+            if(rateMode.value === 'manual') return;
+            try { 
+                const res = await fetch(`https://open.er-api.com/v6/latest/${form.value.currency}`); 
+                const data = await res.json(); currentRate.value = data.rates.HKD || 1; 
+            } catch (e) { currentRate.value = 1; }
         };
 
-        // 這裡重複了核心邏輯以確保 v5.5.7 完整運行
-        const fetchRate = async () => { /* 同之前... */ };
-        const handleCurrencyChange = () => { /* 同之前... */ };
-        const addUser = () => { /* 同之前... */ };
-        const addExpense = () => { /* 同之前... */ };
-        const startEdit = (i) => { /* 同之前... */ };
-        const saveEdit = () => { /* 同之前... */ };
-        const generateImage = () => { /* 同之前... */ };
+        const handleCurrencyChange = () => { if(form.value.currency === 'HKD') { rateMode.value = 'auto'; currentRate.value = 1; } else fetchRate(); };
+        const addUser = () => { if(newUser.value.trim() && !users.value.includes(newUser.value.trim())){ users.value.push(newUser.value.trim()); form.value.involved.push(newUser.value.trim()); if(!form.value.payer) form.value.payer = newUser.value.trim(); newUser.value = ""; } };
+        const addExpense = () => {
+            if(!form.value.item || !form.value.amount || !form.value.payer) return alert("填寫完整");
+            expenses.value.unshift({ id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, rateMode: rateMode.value, involved: [...form.value.involved] });
+            form.value.item = ""; form.value.amount = "";
+        };
+        const startEdit = (i) => {
+            isEditing.value = true; editIndex.value = i; const exp = expenses.value[i];
+            form.value = JSON.parse(JSON.stringify(exp)); currentRate.value = exp.rateUsed; rateMode.value = exp.rateMode;
+            window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
+        };
+        const saveEdit = () => { expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, rateMode: rateMode.value }; isEditing.value = false; form.value.item = ""; form.value.amount = ""; };
+        const execClear = () => { if(confirm("確定刪除？")){ if(clearOpts.value.expenses) expenses.value = []; if(clearOpts.value.users){ users.value = []; form.value.involved = []; form.value.payer = ""; } showClearModal.value = false; } };
 
-        onMounted(() => {
-            const saved = localStorage.getItem('mathgod_v55_data');
-            if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; }
+        const settlements = computed(() => {
+            let bal = {}; users.value.forEach(u => bal[u] = 0);
+            expenses.value.forEach(e => { bal[e.payer] += e.hkd; let s = e.hkd / (e.involved.length || 1); e.involved.forEach(p => { if(bal[p] !== undefined) bal[p] -= s; }); });
+            let d = [], c = [], res = [];
+            for(let u in bal){ if(bal[u] < -0.01) d.push({n:u, a:Math.abs(bal[u])}); if(bal[u] > 0.01) c.push({n:u, a:bal[u]}); }
+            let i=0, j=0; while(i<d.length && j<c.length){ let m = Math.min(d[i].a, c[j].a); res.push({from: d[i].n, to: c[j].n, amount: m}); d[i].a -= m; c[j].a -= m; if(d[i].a < 0.01) i++; if(c[j].a < 0.01) j++; }
+            return res;
         });
+
+        const shareMessage = computed(() => {
+            let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 埋單找數：\n`;
+            settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
+            if (showDetails.value) { msg += `\n📝 消費詳情：\n`; expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`); }
+            msg += `\n大家可以睇返銀碼找數啦！😃`; return msg;
+        });
+
+        const generateImage = async () => { isExporting.value = true; setTimeout(async () => { const canvas = await html2canvas(document.getElementById('capture-zone'), { backgroundColor: '#121212', scale: 2 }); previewImg.value = canvas.toDataURL('image/png'); isExporting.value = false; }, 300); };
+
+        onMounted(() => { const saved = localStorage.getItem('mathgod_v55_data'); if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; } });
         watch([users, expenses], () => { localStorage.setItem('mathgod_v55_data', JSON.stringify({ users: users.value, expenses: expenses.value })); }, {deep: true});
 
-        // 為了節省空間，其餘輔助 Function 邏輯同 v5.5.6
         return { 
-            users, newUser, form, expenses, showDetails, currentRate, rateMode,
-            showClearModal, clearOpts, execClear,
-            addUser, addExpense, startEdit, saveEdit, handleCurrencyChange, fetchRate, generateImage,
-            totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
-            settlements: computed(() => { /* 計算邏輯... */ }),
-            shareMessage: computed(() => { /* 文字訊息... */ }),
-            // ...其餘導出...
+            users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails, currentRate, rateMode, showClearModal, clearOpts,
+            addUser, addExpense, startEdit, saveEdit, handleCurrencyChange, fetchRate, execClear, generateImage, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
+            removeUser: (i)=>users.value.splice(i,1), removeExpense: (i)=>expenses.value.splice(i,1)
         };
     }
 }).mount('#app');
