--- a/index.html
+++ b/index.html
@@ -16,7 +16,14 @@
         .input-bg { background-color: #2d2d2d; border: 1px solid rgba(255,255,255,0.1); color: white; }
         #capture-zone { background-color: #121212 !important; border-radius: 24px; padding: 24px; }
         .whatsapp-green { background-color: #25D366; color: white; }
-        .safe-render { line-height: 1.8; display: inline-block; vertical-align: middle; }
+        
+        .safe-render {
+            line-height: 1.8 !important;
+            padding-bottom: 6px !important;
+            padding-right: 6px !important;
+            display: inline-block !important;
+            vertical-align: middle;
+        }
     </style>
 </head>
 <body class="min-h-screen">
@@ -76,14 +83,23 @@
                 </div>
             </section>
 
-            <div v-if="expenses.length > 0 && showDetails" class="space-y-3 mt-4">
+            <div v-if="expenses.length > 0 && showDetails" class="py-4 flex items-center gap-3 opacity-60">
+                <div class="h-px bg-gray-700 flex-1"></div>
+                <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest safe-render">消費詳情 Details</span>
+                <div class="h-px bg-gray-700 flex-1"></div>
+            </div>
+
+            <div v-if="expenses.length > 0 && showDetails" class="space-y-3">
                 <div v-for="(exp, idx) in expenses" :key="exp.id" class="card-bg p-4 rounded-2xl flex justify-between items-center border-l-4 border-emerald-600 shadow-sm relative">
                     <div class="flex-1 min-w-0 mr-4">
                         <div class="font-black text-sm text-gray-200 truncate safe-render">{{ exp.item }}</div>
-                        <div class="text-[10px] text-gray-500"><b class="text-emerald-600 uppercase">{{ exp.payer }}</b> 付 {{ exp.currency }} {{ exp.amount }}</div>
+                        <div class="text-[10px] text-gray-500">
+                            <b class="text-emerald-600 uppercase safe-render">{{ exp.payer }}</b> 
+                            <span class="opacity-80">付 {{ exp.currency }} {{ exp.amount }}</span>
+                        </div>
                     </div>
                     <div class="text-right flex items-center gap-4">
-                        <div class="font-mono font-bold text-gray-200">HK${{ exp.hkd.toFixed(1) }}</div>
+                        <div class="font-mono font-bold text-gray-200 safe-render">HK${{ exp.hkd.toFixed(1) }}</div>
                         <div v-if="!isExporting" class="flex gap-3 opacity-20 text-xs">
                             <button @click="startEdit(idx)"><i class="fas fa-edit"></i></button>
                             <button @click="removeExpense(idx)" class="text-red-500"><i class="fas fa-trash"></i></button>
@@ -111,12 +127,13 @@
                     <div class="flex justify-between items-center">
                         <span class="text-[10px] font-bold text-gray-400 uppercase tracking-widest">匯率模式</span>
                         <div class="flex gap-1">
-                            <button @click="rateMode = 'auto'" :class="rateMode === 'auto' ? 'bg-emerald-600' : 'bg-white/5 opacity-40'" class="px-3 py-1 rounded-lg text-[10px] font-bold transition-all border border-white/10">即時匯率</button>
-                            <button @click="rateMode = 'manual'" :class="rateMode === 'manual' ? 'bg-emerald-600' : 'bg-white/5 opacity-40'" class="px-3 py-1 rounded-lg text-[10px] font-bold transition-all border border-white/10">自訂匯率</button>
+                            <button @click="rateMode = 'auto'" :class="rateMode === 'auto' ? 'bg-emerald-600 border-emerald-500 text-white' : 'bg-white/5 border-white/10 text-gray-500'" class="px-3 py-1 rounded-lg text-[10px] font-bold transition-all border">即時匯率</button>
+                            <button @click="rateMode = 'manual'" :class="rateMode === 'manual' ? 'bg-emerald-600 border-emerald-500 text-white' : 'bg-white/5 border-white/10 text-gray-500'" class="px-3 py-1 rounded-lg text-[10px] font-bold transition-all border">自訂匯率</button>
                         </div>
                     </div>
                     <div class="relative">
-                        <input v-model.number="currentRate" :disabled="rateMode === 'auto'" type="number" step="0.0001" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none text-emerald-400">
+                        <input v-model.number="currentRate" :disabled="rateMode === 'auto'" type="number" step="0.0001" :class="rateMode === 'auto' ? 'opacity-50' : 'text-emerald-400'" class="input-bg w-full p-3 rounded-xl text-sm font-mono outline-none">
+                        <div v-if="rateMode === 'auto'" class="absolute right-3 top-3"><i class="fas fa-sync fa-spin text-emerald-500 text-xs"></i></div>
                     </div>
                 </div>
 
@@ -143,28 +160,31 @@
             </div>
         </section>
 
-        <div v-if="showClearModal" class="fixed inset-0 bg-black/90 backdrop-blur-lg z-[100] flex items-center justify-center p-6" @click.self="showClearModal = false">
-            <div class="card-bg w-full max-w-xs rounded-[32px] p-8 border border-white/10 shadow-2xl text-center">
-                <i class="fas fa-eraser text-emerald-500 text-3xl mb-4"></i>
-                <h3 class="font-black text-lg mb-6">清除選項</h3>
-                <div class="space-y-4 mb-8">
-                    <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer">
-                        <span class="text-sm font-bold">消費紀錄</span>
-                        <input type="checkbox" v-model="clearOpts.expenses" class="w-5 h-5 accent-emerald-500">
-                    </label>
-                    <label class="flex items-center justify-between p-4 bg-white/5 rounded-2xl cursor-pointer">
-                        <span class="text-sm font-bold">朋友名單</span>
-                        <input type="checkbox" v-model="clearOpts.users" class="w-5 h-5 accent-emerald-500">
-                    </label>
+        <div v-if="showTextShare" class="fixed inset-0 bg-black/80 backdrop-blur-md z-[60] flex items-center justify-center p-6" @click.self="showTextShare = false">
+            <div class="card-bg w-full max-w-sm rounded-[32px] p-6 flex flex-col gap-4 shadow-2xl border border-white/10">
+                <h3 class="font-black text-emerald-500 text-sm">文字結算</h3>
+                <textarea readonly class="input-bg w-full h-64 p-4 rounded-2xl text-[13px] font-mono leading-relaxed" v-model="shareMessage"></textarea>
+                <div class="grid grid-cols-2 gap-3">
+                    <button @click="copyText" class="bg-gray-700 text-white py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">複製文字</button>
+                    <button @click="shareWhatsApp" class="whatsapp-green py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">WhatsApp 分享</button>
                 </div>
-                <button @click="execClear" class="w-full bg-rose-600 text-white py-4 rounded-2xl text-xs font-black mb-2">確認刪除</button>
-                <button @click="showClearModal = false" class="text-gray-500 text-xs font-bold">取消</button>
             </div>
         </div>
 
-        <div v-if="(expenses.length > 0 || users.length > 0) && !isExporting" class="px-4 py-8 text-center">
-            <button @click="showClearModal = true" class="text-gray-600 hover:text-rose-500 text-[10px] font-bold uppercase tracking-widest py-2 transition-all">
-                <i class="fas fa-trash-alt mr-1"></i> 進入清除菜單
+        <div v-if="previewImg" class="fixed inset-0 bg-black/90 backdrop-blur-md z-[70] flex flex-col items-center justify-center p-6" @click.self="previewImg = null">
+            <div class="w-full max-w-sm flex flex-col items-center">
+                <img :src="previewImg" class="max-w-full max-h-[60vh] rounded-2xl shadow-2xl border border-white/10 mb-8">
+                <div class="grid grid-cols-2 gap-4 w-full">
+                    <button @click="downloadImage" class="bg-white/10 text-white border border-white/20 py-4 rounded-2xl text-xs font-bold active:scale-95 transition-all">下載圖片</button>
+                    <button @click="shareImage" class="evergreen-gradient text-white py-4 rounded-2xl text-xs font-bold shadow-lg active:scale-95 transition-all">分享圖片</button>
+                </div>
+                <button @click="previewImg = null" class="mt-8 text-emerald-500 text-xs font-bold underline">返回編輯</button>
+            </div>
+        </div>
+
+        <div v-if="expenses.length > 0 && !isExporting" class="px-4 py-6 text-center">
+            <button @click="clearAll" class="text-red-500/40 hover:text-red-500 text-[10px] font-bold uppercase tracking-widest py-2 transition-colors">
+                <i class="fas fa-trash-alt mr-1"></i> 清除所有紀錄
             </button>
         </div>
     </div>
@@ -174,62 +194,128 @@
 const { createApp, ref, computed, watch, onMounted } = Vue;
 createApp({
     setup() {
-        const users = ref([]); const expenses = ref([]); const showDetails = ref(true);
-        const newUser = ref(""); const isEditing = ref(false); const editIndex = ref(null);
-        const isExporting = ref(false); const previewImg = ref(null); const showTextShare = ref(false);
-        const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
+        const users = ref([]); const newUser = ref(""); const expenses = ref([]);
         const currentRate = ref(1); const rateMode = ref('auto');
-        const showClearModal = ref(false); const clearOpts = ref({ expenses: true, users: false });
+        const isEditing = ref(false); const editIndex = ref(null);
+        const isExporting = ref(false); const previewImg = ref(null); const showTextShare = ref(false);
+        const showDetails = ref(true);
+        const form = ref({ item: "", amount: "", currency: "HKD", payer: "", involved: [] });
 
         const fetchRate = async () => {
             if(form.value.currency === 'HKD') { currentRate.value = 1; return; }
             if(rateMode.value === 'manual') return;
             try { 
                 const res = await fetch(`https://open.er-api.com/v6/latest/${form.value.currency}`); 
-                const data = await res.json(); currentRate.value = data.rates.HKD || 1; 
+                const data = await res.json(); 
+                currentRate.value = data.rates.HKD || 1; 
             } catch (e) { currentRate.value = 1; }
         };
 
-        const handleCurrencyChange = () => { if(form.value.currency === 'HKD') { rateMode.value = 'auto'; currentRate.value = 1; } else fetchRate(); };
-        const addUser = () => { if(newUser.value.trim() && !users.value.includes(newUser.value.trim())){ users.value.push(newUser.value.trim()); form.value.involved.push(newUser.value.trim()); if(!form.value.payer) form.value.payer = newUser.value.trim(); newUser.value = ""; } };
+        const handleCurrencyChange = () => {
+            if(form.value.currency === 'HKD') { rateMode.value = 'auto'; currentRate.value = 1; }
+            else { fetchRate(); }
+        };
+
+        const addUser = () => {
+            const n = newUser.value.trim();
+            if (n && !users.value.includes(n)) { users.value.push(n); form.value.involved.push(n); if(!form.value.payer) form.value.payer = n; newUser.value = ""; }
+        };
+
         const addExpense = () => {
-            if(!form.value.item || !form.value.amount || !form.value.payer) return alert("填寫完整");
-            expenses.value.unshift({ id: Date.now(), ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, rateMode: rateMode.value, involved: [...form.value.involved] });
+            if (!form.value.item || !form.value.amount || !form.value.payer) return alert("請填寫正確資料");
+            expenses.value.unshift({ 
+                id: Date.now(), ...form.value, 
+                hkd: form.value.amount * currentRate.value, 
+                rateUsed: currentRate.value,
+                rateMode: rateMode.value,
+                involved: [...form.value.involved] 
+            });
             form.value.item = ""; form.value.amount = "";
         };
+
         const startEdit = (i) => {
-            isEditing.value = true; editIndex.value = i; const exp = expenses.value[i];
-            form.value = JSON.parse(JSON.stringify(exp)); currentRate.value = exp.rateUsed; rateMode.value = exp.rateMode;
+            isEditing.value = true; editIndex.value = i;
+            const exp = expenses.value[i];
+            form.value = JSON.parse(JSON.stringify(exp));
+            currentRate.value = exp.rateUsed || 1;
+            rateMode.value = exp.rateMode || 'auto';
             window.scrollTo({ top: document.getElementById('input-section').offsetTop - 100, behavior: 'smooth' });
         };
-        const saveEdit = () => { expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, rateMode: rateMode.value }; isEditing.value = false; form.value.item = ""; form.value.amount = ""; };
-        const execClear = () => { if(confirm("確定刪除？")){ if(clearOpts.value.expenses) expenses.value = []; if(clearOpts.value.users){ users.value = []; form.value.involved = []; form.value.payer = ""; } showClearModal.value = false; } };
+
+        const saveEdit = () => {
+            expenses.value[editIndex.value] = { ...form.value, hkd: form.value.amount * currentRate.value, rateUsed: currentRate.value, rateMode: rateMode.value };
+            isEditing.value = false; form.value.item = ""; form.value.amount = "";
+        };
 
         const settlements = computed(() => {
-            let bal = {}; users.value.forEach(u => bal[u] = 0);
-            expenses.value.forEach(e => { bal[e.payer] += e.hkd; let s = e.hkd / (e.involved.length || 1); e.involved.forEach(p => { if(bal[p] !== undefined) bal[p] -= s; }); });
+            let balances = {}; users.value.forEach(u => balances[u] = 0);
+            expenses.value.forEach(exp => {
+                balances[exp.payer] += exp.hkd;
+                const split = exp.hkd / (exp.involved.length || 1);
+                exp.involved.forEach(p => { if(balances[p] !== undefined) balances[p] -= split; });
+            });
             let d = [], c = [], res = [];
-            for(let u in bal){ if(bal[u] < -0.01) d.push({n:u, a:Math.abs(bal[u])}); if(bal[u] > 0.01) c.push({n:u, a:bal[u]}); }
-            let i=0, j=0; while(i<d.length && j<c.length){ let m = Math.min(d[i].a, c[j].a); res.push({from: d[i].n, to: c[j].n, amount: m}); d[i].a -= m; c[j].a -= m; if(d[i].a < 0.01) i++; if(c[j].a < 0.01) j++; }
+            for (let u in balances) {
+                if (balances[u] < -0.01) d.push({n:u, a:Math.abs(balances[u])});
+                if (balances[u] > 0.01) c.push({n:u, a:balances[u]});
+            }
+            let i=0, j=0;
+            while(i<d.length && j<c.length){
+                let m = Math.min(d[i].a, c[j].a);
+                res.push({from: d[i].n, to: c[j].n, amount: m});
+                d[i].a -= m; c[j].a -= m;
+                if(d[i].a < 0.01) i++; if(c[j].a < 0.01) j++;
+            }
             return res;
         });
 
         const shareMessage = computed(() => {
             let msg = `⚡️ 【數神 MathGod】結算\n📊 總支出：HK$${expenses.value.reduce((s,e)=>s+e.hkd,0).toFixed(1)}\n\n✅ 埋單找數：\n`;
             settlements.value.forEach(s => msg += `🔹 ${s.from} ➔ ${s.to}：HK$${s.amount.toFixed(1)}\n`);
-            if (showDetails.value) { msg += `\n📝 消費詳情：\n`; expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`); }
-            msg += `\n大家可以睇返銀碼找數啦！😃`; return msg;
+            if (showDetails.value && expenses.value.length > 0) {
+                msg += `\n📝 消費詳情：\n`;
+                expenses.value.forEach(e => msg += `▫️ ${e.item} (${e.payer})：${e.currency}${e.amount}\n`);
+            }
+            msg += `\n大家可以睇返銀碼找數啦！😃`;
+            return msg;
         });
 
-        const generateImage = async () => { isExporting.value = true; setTimeout(async () => { const canvas = await html2canvas(document.getElementById('capture-zone'), { backgroundColor: '#121212', scale: 2 }); previewImg.value = canvas.toDataURL('image/png'); isExporting.value = false; }, 300); };
+        const generateImage = async () => {
+            isExporting.value = true;
+            setTimeout(async () => {
+                const element = document.getElementById('capture-zone');
+                try {
+                    const canvas = await html2canvas(element, { backgroundColor: '#121212', scale: 2, useCORS: true });
+                    previewImg.value = canvas.toDataURL('image/png');
+                } catch (err) { alert("截圖失敗"); }
+                isExporting.value = false;
+            }, 300);
+        };
 
-        onMounted(() => { const saved = localStorage.getItem('mathgod_v55_data'); if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; } });
+        const clearAll = () => {
+            if(confirm("確定清空所有紀錄？（包括朋友名單及消費）")) {
+                expenses.value = [];
+                users.value = [];
+                form.value.involved = [];
+                form.value.payer = "";
+                localStorage.removeItem('mathgod_v55_data');
+            }
+        };
+
+        onMounted(() => {
+            const saved = localStorage.getItem('mathgod_v55_data');
+            if (saved) { const d = JSON.parse(saved); users.value = d.users || []; expenses.value = d.expenses || []; }
+        });
         watch([users, expenses], () => { localStorage.setItem('mathgod_v55_data', JSON.stringify({ users: users.value, expenses: expenses.value })); }, {deep: true});
 
         return { 
-            users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails, currentRate, rateMode, showClearModal, clearOpts,
-            addUser, addExpense, startEdit, saveEdit, handleCurrencyChange, fetchRate, execClear, generateImage, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
-            removeUser: (i)=>users.value.splice(i,1), removeExpense: (i)=>expenses.value.splice(i,1)
+            users, newUser, form, expenses, isEditing, isExporting, previewImg, showTextShare, shareMessage, showDetails, currentRate, rateMode,
+            addUser, addExpense, startEdit, saveEdit, settlements, totalSpent: computed(()=>expenses.value.reduce((s,e)=>s+e.hkd,0)),
+            handleCurrencyChange, fetchRate, generateImage, downloadImage:()=> { const l=document.createElement('a'); l.download='MathGod.png'; l.href=previewImg.value; l.click(); },
+            shareImage: async()=> { try{const r=await fetch(previewImg.value); const b=await r.blob(); const f=new File([b],'s.png',{type:'image/png'}); if(navigator.share) await navigator.share({files:[f]});}catch(e){} },
+            copyText:()=> { navigator.clipboard.writeText(shareMessage.value); alert("已複製！"); },
+            shareWhatsApp:()=> { window.open(`https://api.whatsapp.com/send?text=${encodeURIComponent(shareMessage.value)}`); },
+            clearAll, removeUser:(i)=>users.value.splice(i,1), removeExpense:(i)=>expenses.value.splice(i,1)
         };
     }
 }).mount('#app');
